increasing tempo on rhythm deck